<resources>
    <string name="app_name">My Home</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_answer">Answer</string>
    <string name="prompt_re_enter_password">Re-enter Password</string>
    <string name="action_Login">Sign In</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_next">Next</string>
    <string name="enroll_now">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_help">Help</string>
    <string name="valid_first_name">Please enter a valid first name.</string>
    <string name="valid_last_name">Please enter a valid last name.</string>
    <string name="valid_email">Please enter a valid email.</string>
    <string name="valid_password">Please enter a valid password.</string>
    <string name="valid_password_match">Please match your password entries.</string>
    <string name="valid_password_same">New and existing passwords cannot be same.</string>
    <string name="forgot_password_success_msg">Please check your email for instructions to reset your password.</string>
    <string name="enrollment_success">Congratulations! Your new My Home is ready.</string>
    <string name="no_network_msg">We\'re sorry, we\'re unable to detect your network. Please connect and try again.</string>
    <string name="enrollment_success_dialog_tittle">You\'re enrolled in My Home! To get started, confirm your enrollment in the email sent to you.</string>
    <string name="enrollment_success_dialog_msg">Your new My Home is waiting! Please confirm your enrollment within 30 days.</string>
    <string name="sign_out">Sign Out</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="no_upcoming_appointments">You have no upcoming appointments.</string>
    <string name="no_past_appointments">You have no past appointments.</string>
    <string name="fad_title">Care</string>
    <string name="appointments">Appointments</string>
    <string name="home">Home</string>
    <string name="welcome_home">Welcome Home!</string>
    <string name="profile">Profile</string>
    <string name="details">Details</string>
    <string name="share_appointment">Share Appointment</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="contact_support">Help</string>
    <string name="developer_settings">Developer Settings</string>
    <string name="api_settings">API Settings</string>
    <string name="no_providers">Please adjust your search to view more doctors.</string>
    <string name="no_education_found">No Education Found</string>
    <string name="appointment_reschedule">To reschedule or cancel your appointment, please call your doctor\'s location directly.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">Unknown</string>
    <string name="not_available">Not Available</string>
    <string name="find_care">Find Care</string>
    <string name="miles_concat">mi</string>
    <string name="forgot_password_header">Please enter your email address.</string>
    <string name="forgot_password_subheader">An email will be sent to entered address with reset instructions</string>
    <string name="booking_select_person_header">Who is this appointment for?</string>
    <string name="booking_select_status_header">Are you a new patient?</string>
    <string name="booking_timezone_warning">All appointments are in %s time zone</string>
    <string name="me">Me</string>
    <string name="family_member">Family Member</string>
    <string name="booking_reason_hint">Please tell us the purpose of your visit.</string>
    <string name="next">Next</string>
    <string name="contact_us_subheader">We\'re here when you need us.</string>
    <string name="contact_us_warning">If this is an emergency, please call 911 immediately.</string>
    <string name="contact_us_header">Thank you for visiting Dignity Health.</string>
    <string name="save">Save</string>
    <string name="password_criteria">Password Criteria</string>
    <string name="search_hint">Search for Doctor, Specialty, Procedure or Condition</string>
    <string name="user_location">Current Location</string>
    <string name="sort_by">Sort By</string>
    <string name="distance">Distance</string>
    <string name="best_match">Best Match</string>
    <string name="last_name">Last Name</string>
    <string name="filter_by">Filter By</string>
    <string name="accepting_new_patients">Accepting New Patients</string>
    <string name="display_recently_viewed_doctors">Display recently viewed doctors</string>
    <string name="ok">Ok</string>
    <string name="did_you_know">Did you know?</string>
    <string name="learn_more">Learn more</string>
    <string name="tip_of_the_day">Tip of the Day</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="first_name">First Name</string>
    <string name="preferred_name">Preferred Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth (mm/dd/yyyy)</string>
    <string name="address">Address</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="you_cannot_edit_email_address">You cannot edit email address</string>
    <string name="insurance_plan">Insurance Plan</string>
    <string name="member_id">Member ID</string>
    <string name="group_id">Group ID</string>
    <string name="profile_unavailable">We’re sorry, your profile is currently unavailable.</string>
    <string name="group">Group ID</string>
    <string name="edit">Edit</string>
    <string name="board_certifications">Board Certifications</string>
    <string name="awards_amp_recognitions"><![CDATA[Awards & Recognitions]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="languages">Languages</string>
    <string name="experience">Experience</string>
    <string name="care_philosophy">Care Philosophy</string>
    <string name="locations">Locations</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="preferences">Preferences</string>
    <string name="contact_us">Contact Us</string>
    <string name="bill_pay">Bill Pay</string>
    <string name="developer">Developer</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="no_valid_session">For your security, please sign in again.</string>
    <string name="signed_out_successfully">You are now signed out.</string>
    <string name="profile_saved">Your profile is saved.</string>
    <string name="profile_save_failed">We\'re sorry, we are currently unable to save your profile changes.</string>
    <string name="please_install_calendar_app">Keep track of your appointments by installing a calendar application.</string>
    <string name="no_app_share_appointments">Share your appointments by connecting a communications app.</string>
    <string name="unknown_activity_tag">We didn’t catch that.</string>
    <string name="max_login_tries_reached">We\'re sorry, we need to reset. Take five and try again.</string>
    <string name="appointment_created">Your appointment is confirmed. We’ll see you then!</string>
    <string name="appointment_creation_failed">We\'re sorry, we couldn’t confirm your appointment. Please contact your doctor’s office.</string>
    <string name="query_empty">Please enter a word or phrase to search.</string>
    <string name="query_location_unavailable">Please select a location from the filter to narrow your search.</string>
    <string name="provider_details_unavailable">Provider Details Unavailable</string>
    <string name="password_criteria_8char">Password must be at least 8 characters</string>
    <string name="password_criteria_name">Password must not contain part of your name</string>
    <string name="password_criteria_uppercase">At least one UPPERCASE letter</string>
    <string name="password_criteria_lowercase">At least one lowercase letter</string>
    <string name="password_criteria_number">At least one number</string>
    <string name="password_criteria_special_char"><![CDATA[At least one special character: !@#$%^&*]]></string>
    <string name="registration_first_name">First Name</string>
    <string name="registration_middle_initial">Middle Initial</string>
    <string name="registration_last_name">Last Name</string>
    <string name="registration_email_address">Email Address</string>
    <string name="registration_email_confirm">Confirm Email Address</string>
    <string name="registration_password">Password</string>
    <string name="registration_state">State</string>
    <string name="registration_country">Country</string>
    <string name="registration_date_of_birth">Date of Birth</string>
    <string name="registration_gender">Gender</string>
    <string name="registration_male">Male</string>
    <string name="registration_female">Female</string>
    <string name="registration_service_agreement">I agree to the terms of service</string>
    <string name="registration_address1">Address 1</string>
    <string name="registration_address2">Address 2</string>
    <string name="registration_city">City</string>
    <string name="registration_zip_code">Zip Code</string>
    <string name="menu_action_inbox">Inbox</string>
    <string name="menu_action_sent_messages">Sent Messages</string>
    <string name="menu_action_appointments">Appointments</string>
    <string name="menu_action_visit_reports">Visit Summaries</string>
    <string name="menu_action_log_out">Log out</string>
    <string name="menu_action_add_service_key">Add Service Key</string>
    <string name="menu_action_set_locale">Set Locale</string>
    <string name="msg_detail_action_delete">Delete</string>
    <string name="msg_detail_action_reply">Reply</string>
    <string name="msg_detail_action_forward">Forward</string>
    <string name="title_activity_health_documents">Health Documents</string>
    <string name="add_credit_card_name_on_card">Name on Card</string>
    <string name="add_credit_card_card_number">Card Number</string>
    <string name="add_credit_card_expiration_month">Expiration Month</string>
    <string name="add_credit_card_expiration_year">Expiration Year</string>
    <string name="add_credit_card_cvv">CVV</string>
    <string name="add_credit_card_billing_address">Billing Address</string>
    <string name="add_credit_card_address1">Address 1</string>
    <string name="add_credit_card_address2">Address 2</string>
    <string name="add_credit_card_city">City</string>
    <string name="add_credit_card_zip_code">Zip Code</string>
    <string name="home_menu_group_profile">My Profile</string>
    <string name="home_menu_group_health">My Health</string>
    <string name="home_menu_profile_insurance">Insurance</string>
    <string name="home_menu_profile_pharmacy">Pharmacy</string>
    <string name="home_menu_profile_update_consumer">My Information</string>
    <string name="home_menu_profile_tech_check">Tech Check</string>
    <string name="home_menu_profile_payment">Payment Information</string>
    <string name="home_menu_profile_dependents">Add Child</string>
    <string name="home_menu_health_conditions">Medical History</string>
    <string name="home_menu_health_allergies">Allergies</string>
    <string name="home_menu_health_medications">Medications</string>
    <string name="home_menu_health_vitals">Vitals</string>
</resources>