<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright 2016 American Well Systems
    * All rights reserved.
    * <p/>
    * It is illegal to use, reproduce or distribute
    * any part of this Intellectual Property without
    * prior written authorization from American Well.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_message"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/msg_detail_action_delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_reply_to_message"
        android:icon="@drawable/ic_reply_white_24dp"
        android:title="@string/msg_detail_action_reply"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_forward_message"
        android:icon="@drawable/ic_forward_white_24dp"
        android:title="@string/msg_detail_action_forward"
        app:showAsAction="ifRoom"/>

</menu>